realizando alteração no front

--- a/public/stylesheets/cadVet.css
+++ b/public/stylesheets/cadVet.css
@@ -1,92 +1,97 @@
-*{
-    margin: 0;
-}
-     
-.interactions{
-    color: black;
-    list-style: none;
-    display: flex;
-    font-size: 18px;
-    gap: 50px;
-    text-decoration: none; 
-}
- 
-.cadVet{
-    margin:0 auto;
-    font-size:  24px;
-    padding: 50px ;
+* {
+  margin: 0;
 }
 
-.form{
-    border: none;
-    width: 500px;
-    height: 50px;
-    border-radius: 38px;
-    font-size: 18px;
-    text-align: center;
-    margin: 10px 0px 10px 0px;
+.interactions {
+  color: black;
+  list-style: none;
+  display: flex;
+  font-size: 18px;
+  gap: 50px;
+  text-decoration: none;
 }
 
-.botoes{
-    display: block;
-    margin: 0 auto;
-    text-align: center;
+.cadVet {
+  margin: 0 auto;
+  font-size: 24px;
+  padding: 50px;
 }
-  
-.align-row{ 
-    margin:0px auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    text-align: start;
-    font-size:  24px;
-    align-items: center;
+
+.form {
+  border: none;
+  width: 500px;
+  height: 50px;
+  border-radius: 38px;
+  font-size: 18px;
+  text-align: center;
+  margin: 10px 0px 10px 0px;
+}
+
+.botoescadVet {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.align-row-cadVet {
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  text-align: start;
+  font-size: 24px;
+  align-items: center;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-style: bold;
-    min-height: 100vw;
-    min-width: 100vw;
-    background-color: rgba(86, 177, 189, 0.45) ;
-    text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-style: bold;
+  min-height: 100vw;
+  min-width: 100vw;
+  background-color: rgba(86, 177, 189, 0.45);
+  text-align: center;
 }
-  
-button:hover{
-    background-color: hsl(137, 100%, 81%);
+
+button:hover {
+  background-color: hsl(137, 100%, 81%);
 }
 
 .cadastrar {
-    background-color: black;
-    text-decoration-color: white;
-    width: 198px;
-    height: 82px;
+  background-color: black;
+  text-decoration-color: white;
+  width: 198px;
+  height: 82px;
 }
 
-.Limpar{
-    background-color: white;
-    text-decoration-color: black;
-    width: 198px;
-    height: 82px; 
+.Limpar {
+  background-color: white;
+  text-decoration-color: black;
+  width: 198px;
+  height: 82px;
 }
 
-.cadastrar{
-    background-color:black ;
-    color: white;
+.cadastrar {
+  background-color: black;
+  color: white;
 }
 
-.limpar{
-    background-color:white ;
-    color: black;
+.limpar {
+  background-color: white;
+  color: black;
 }
 
 @media (min-width: 786px) {
-    .menu {
-      display: flex;
-    }
-  
-    .menu-mobile {
-      display: none;
-    }
+  .menu {
+    display: flex;
+  }
+
+  .menu-mobile {
+    display: none;
+  }
+
+  .botoescadVet {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
