--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,19 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap");
 
-*{
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-  }
-  /*Criado para as configurações gerais (Matheus)*/
+* {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+/*Criado para as configurações gerais (Matheus)*/
 
-  body {
-    min-height: 100vw;
-    min-width: 100vw;
-    background-color: rgba(86, 177, 189, 0.45) ;
-    text-align: center;
-  }
-  .cadastroLogin{
-    border: none;
+body {
+  min-width: 100vw;
+  background-color: rgba(86, 177, 189, 0.45);
+  text-align: center;
+}
+.cadastroLogin {
+  border: none;
 
   background-color: rgba(86, 177, 189, 0.45);
   color: black;
