--- a/public/stylesheets/abaVet.css
+++ b/public/stylesheets/abaVet.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+
 * {
+  font-family: 'Kantumruy Pro', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+
 
 .HistoricoConsultas {
   background-color: #bbefc3;
@@ -54,6 +59,7 @@ table .button {
     font-size: 18px;
     padding: 8px;
   }
+
   table {
     max-width: 50%;
   }
