--- a/public/stylesheets/cadVet.css
+++ b/public/stylesheets/cadVet.css
@@ -1,5 +1,7 @@
-* {
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
+  margin: 0;
 }
 
 .interactions {
