--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
 *{
-    margin: 0;
-  }
-  
+  font-family: 'Kantumruy Pro', sans-serif;
+  margin: 0;
+}
 
    
   .interactions{
