--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -1,6 +1,9 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
   margin: 0;
 }
+
 
 .interactions {
   color: black;
