--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,4 +1,6 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
   margin: 0;
 }
 
