--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,11 +1,15 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
   margin: 0;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
 
-  min-width: 100vw;
+body {
+  max-width: 100vw;
+  max-height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(86, 177, 189, 0.45);
   text-align: center;
 }
