--- a/public/stylesheets/promo.css
+++ b/public/stylesheets/promo.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
+}
 
 .anuncios{
     display: flex;
