--- a/public/stylesheets/slider.css
+++ b/public/stylesheets/slider.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
+}
+
+
 body {
     display: flex;
     flex-direction: center;
