--- a/public/stylesheets/stylegustavo copy.css
+++ b/public/stylesheets/stylegustavo copy.css
@@ -1,6 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+
+  
+
+
 *{
   margin: 0 auto;
   padding: 0px;
+  font-family: 'Kantumruy Pro', sans-serif;
 }
 
 h1 {
