--- a/public/stylesheets/stylegustavo.css
+++ b/public/stylesheets/stylegustavo.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
+*{
+  font-family: 'Kantumruy Pro', sans-serif;
+}
+
 h1 {
   text-align: center;
   font-size: 28px;
@@ -5,7 +11,6 @@ h1 {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
   background-color: #fafafa;
 }
 
