--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -25,11 +25,11 @@
         <br>
         <label for="email">E-mail:</label>
         <br>
-        <input type="email" id="email" name="email" required class="formulario">
+        <input type="email" id="email" name="email" required class="contato-formulario">
         <br>
         <label for="number">Numero/Whatsapp:</label>
         <br>
-        <input type="number" id="number" name="number" required class="formulario">
+        <input type="number" id="number" name="number" required class="contato-formulario">
         <br>
         <label for="Mensagem">Mensagem:</label>
         <br>
