--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,67 +1,88 @@
 <!DOCTYPE html>
 <html>
-  
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <link rel="stylesheet" href="/stylesheets/header.css">
-    <link rel="stylesheet" href="/stylesheets/footer.css">    
-    <link rel="stylesheet" href="/stylesheets/index.css">
-    <link rel="stylesheet" href="/stylesheets/promo.css">    
-    <title>PetHelp</title>
-  </head>
-  
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="stylesheet" href="/stylesheets/footer.css">
+  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link rel="stylesheet" href="/stylesheets/promo.css">
+  <title>PetHelp</title>
+</head>
+
 <body>
   <%- include('./partials/header.ejs') %>
-  <section>
-    <div>
-      <div class="centralizar-texto">
-      <p>
-        <h3>Todo cuidado de seu pet a um clique</h3>
-      </p>
-    </div>
-      <div class = "carrossel"  id="slider">
-        <img class="selected" src="/images/image 3.png" alt="Image0">
-        <img src="https://images.unsplash.com/photo-1530432999454-016a47c78af3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Image1">
-        <img src="https://images.unsplash.com/photo-1562514947-bf9cf8e45d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image2">
-        <img src="https://images.unsplash.com/photo-1562526109-878e3d276ceb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image3">
-        <img src="https://images.unsplash.com/photo-1504870444519-3c678061c754?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image4">
+    <section>
+      <div>
+        <div class="centralizar-texto">
+          <p>
+          <h1>Todo cuidado para o seu pet a um clique</h1>
+          </p>
+        </div>
+        <div class="carrossel" id="slider">
+          <img class="selected" src="/images/image 3.png" alt="Image0">
+          <img
+            src="https://images.unsplash.com/photo-1530432999454-016a47c78af3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt="Image1">
+          <img
+            src="https://images.unsplash.com/photo-1562514947-bf9cf8e45d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="Image2">
+          <img
+            src="https://images.unsplash.com/photo-1562526109-878e3d276ceb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="Image3">
+          <img
+            src="https://images.unsplash.com/photo-1504870444519-3c678061c754?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="Image4">
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="mundoPet" class="secao-impar">
-    <h1>Mundo Pet</h1>
-    <div class="outer-wrapper">
-      
-        <ul>
-          <div class="secao-impar">
-            <img class="imagem-margem-1" src="/images/image 2.png" alt="Pet Help" />
-              <p class="margem-inferior-texto">Lorem ipsum dolor sit amet. Est provident molestias id minus internos sed repudiandae iure! Est quos saepe et incidunt quia aut suscipit rerum est sint perferendis!</p>
-          </div>
-        </ul>
+    <section id="mundoPet">
 
+      <br>
+
+      <h2>Mundo Pet</h2>
+      <!--Tinhamos dois h1, troquei para h2 -->
+      <div class="outer-wrapper">
+        <!-- Troquei as Div's e paragrafos para li -->
         <ul>
-          <div class="secao-impar">
+          <li><img class="imagem-margem-1" src="/images/image 2.png" alt="Pet Help" />
+            <br>
+            Lorem ipsum dolor sit amet. Est provident molestias id minus internos sed repudiandae iure! Est quos saepe
+            et incidunt quia aut suscipit rerum est sint perferendis!
+          </li>
+
+          <br>
+
+          <li>
             <img class="imagem-margem-1" src="/images/image 1.png" alt="Pet Help" />
-              <p class="margem-inferior-texto">Lorem ipsum dolor sit.</p>
-          </div>
-        </ul>
+            <br>
+            Lorem ipsum dolor sit.
+          </li>
 
-        <ul>
-          <div class="secao-impar">
+          <br>
+
+          <li>
             <img class="imagem-margem-1" src="/images/image 4.png" alt="Pet Help" />
-              <p class="margem-inferior-texto">Lorem ipsum dolor sit amet. Et cumque voluptas ab sapiente quia aut dolorem sequi. Qui recusandae animi ut mollitia consectetur Qui inventore! Id molestias ea ipsam ipsa Qui odio ut voluptatem quam aut eius voluptates aut maiores atque.</p>
-          </div>
+            <br>
+            Lorem ipsum dolor sit amet. Et cumque voluptas ab sapiente quia aut
+            dolorem sequi. Qui recusandae animi ut mollitia consectetur Qui inventore! Id molestias ea ipsam ipsa
+            Qui odio ut voluptatem quam aut eius voluptates aut maiores atque.
+          </li>
         </ul>
-      
-    </div>
-  </section>
+      </div>
 
-  <section id="sobre">
-    <div class="outer-wrapper">
-      
+      <br>
+      <br>
+
+    </section>
+
+
+    <section id="sobre">
+      <div class="outer-wrapper">
+
         <ul>
           <div class="inner-wrapper">
             <img class="imagem-margem-3" src="/images/media.png" alt="Pet Help" />
@@ -87,11 +108,13 @@
             </li>
           </div>
         </ul>
-      
-    </div>
 
-    <div class="outer-wrapper">
+      </div>
+
+      <br>
       
+      <div class="outer-wrapper">
+
         <ul>
           <div class="inner-wrapper">
             <h3>Cabeçalho do Texto</h3>
@@ -112,23 +135,23 @@
             </li>
           </div>
         </ul>
-        
+
         <ul>
           <div class="inner-wrapper">
             <img class="imagem-margem-4" src="/images/media1.png" alt="Pet Help" />
           </div>
         </ul>
-      
-    </div>
-    </div>
-  </section>
-  <section class="secao-impar">
-    <div class="area-reservada">
-      <%- include('./partials/promo.ejs') %>
-    </div>
-  </section>
 
-<script src="/javascripts/slider.js"></script>
+      </div>
+      </div>
+    </section>
+    <section class="secao-impar">
+      <div class="area-reservada">
+        <%- include('./partials/promo.ejs') %>
+      </div>
+    </section>
+
+    <script src="/javascripts/slider.js"></script>
 
 </body>
 
