--- a/public/stylesheets/cadVet.css
+++ b/public/stylesheets/cadVet.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
-*{
-  font-family: 'Kantumruy Pro', sans-serif;
-  margin: 0;
+
+* {
+    font-family: 'Kantumruy Pro', sans-serif;
+    margin: 0;
 }
 
-.interactions {
-    color: black;
-    list-style: none;
-    display: flex;
-    font-size: 18px;
-    gap: 50px;
-    text-decoration: none;
+
+
+
+h2 {
+    margin: 28px;
 }
 
 .cadVet {
@@ -19,37 +18,37 @@
     padding: 50px;
 }
 
-.form {
+.formulario {
     border: none;
-    width: 500px;
+    max-width: 500px;
     height: 50px;
+    width: 100%;
     border-radius: 38px;
     font-size: 18px;
-    text-align: center;
-    margin: 10px 0px 10px 0px;
-}
-
-.btn-cadVet {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.align-rowCad {
-    margin: 0px auto;
+    margin: 10px auto;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    text-align: start;
-    font-size: 24px;
+    text-align: center;
+    font-size: 20px;
     align-items: center;
 }
 
+.formularioOption {
+    max-width: 500px;
+    height: 50px;
+    width: 100%;
+    border-radius: 38px;
+    font-size: 18px;
+    margin: 15px auto;
+    text-align: center;
+    display: flex;
+
+}
+
+
 .cadastroBody {
     font-family: 'Open Sans', sans-serif;
-    font-style: bold;
-    min-height: 100vw;
+    font-style: oblique;
     min-width: 100vw;
     background-color: rgba(86, 177, 189, 0.45);
     text-align: center;
@@ -59,24 +58,27 @@ button:hover {
     background-color: hsl(137, 100%, 81%);
 }
 
-.btn-cadVet-cadastrar {
-    background-color: black;
-    text-decoration-color: white;
-    width: 198px;
-    height: 82px;
-}
-
-
-.btn-cadVet-cadastrar {
+.btn-entrar {
     background-color: black;
     color: white;
+    width: 198px;
+    height: 42px;
 }
 
-.btn-cadVet-limpar {
+.btn-sigIn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    margin: 25px auto;
+    text-align: center;
+}
+
+.btn-limpar {
     background-color: white;
-    color: black;
+    text-decoration-color: black;
     width: 198px;
-    height: 82px;
+    height: 42px;
 }
 
 @media (min-width: 786px) {
