--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -4,27 +4,27 @@
   margin: 0;
 }
 
-   
-  .interactions{
-    color: black;
-    list-style: none;
-    display: flex;
-    font-size: 18px;
-    gap: 50px;
-    text-decoration: none; 
-    
-  }
+
  
-  .user-cad{
+  div h3{
 
     margin:0 auto;
-    font-size:  24px;
+    font-size:24px;
     padding: 50px ;
+    width: 100%;
+    text-align: center;
     
   }
-  .formulario{
+
+  form{
+    width: 100%;
+
+  }
+
+  .formularioCadastro {
     border: none;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     height: 50px;
     border-radius: 38px;
     font-size: 18px;
@@ -40,7 +40,9 @@
 
   }
   
-  .align-row-userCad{ 
+  .align-row-userCad { 
+    max-width: 500px;
+    width: 100%;
     margin:0px auto;
     display: flex;
     flex-direction: column;
@@ -64,26 +66,22 @@
     background-color: hsl(137, 100%, 81%);
 
   }
-  .cadastrar {
+  .btn-userCad-cad{
     background-color: black;
-    text-decoration-color: white;
-    width: 198px;
+    color: white;
+    max-width: 150px;
     height: 82px;
+    width: 100%;
 
   }
   .btn-userCad-limpar{
     background-color: white;
-    text-decoration-color: black;
-    width: 198px;
+    color: black;
+    max-width: 150px;
     height: 82px; 
+    width: 100%;
 
   }
-  .btn-userCad-cad{
-      background-color:black ;
-      color: white;
-
-  }
-
   
   
   
