--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -8,15 +8,14 @@
 footer {
   background-color: hsl(137, 100%, 81%);
   color: black;
-
   font-family: "Open Sans", sans-serif;
   font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
-
   justify-content: space-between;
   border-radius: 6px;
   margin-bottom: 0;
+  width: 100%;
 }
 
 .footertext {
@@ -26,7 +25,7 @@ footer {
 
 .footerlinks {
   display: flex;
-
+  width: 100%;
   align-items: center;
   font-size: 18px;
   flex-direction: column;
@@ -58,7 +57,7 @@ footer {
   }
 
   .footermidias {
-    padding-right: 20px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     margin: 10px;
