--- a/views/cadVet.ejs
+++ b/views/cadVet.ejs
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<%-include('. /partials/head.ejs') %>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/stylesheets/header.css" />
+  <link rel="stylesheet" href="/stylesheets/footer.css" />
+  <link rel="stylesheet" href="/stylesheets/cadVet.css" />
+  <link rel="stylesheet" href="/stylesheets/promo.css" />
 
-  <body class="cadastroBody">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+  <title>PetHelp</title>
+</head>
 
-    <%-include('. /partials/header.ejs') %>
+<body class="cadastroBody">
 
-      <section>
-        <h3 class="cadastro">Cadastro de Veterinário</h3>
+  <%-include('./partials/header.ejs') %>
+
+    <section>
+      <h2 class="">Cadastro de Veterinário</h3>
         <div class="align-rowCad">
           <form method="POST">
             <label for="name" class="nome">Nome Completo:</label>
@@ -41,7 +52,7 @@
 
             <label>Sexo:</label>
             <br>
-            <select name="Genero" class="formulario">
+            <select name="Genero" class="formularioOption">
               <option value="0">Selecione seu gênero
               </option>
               <option value="1">Masculino
@@ -54,7 +65,7 @@
             <br>
             <label>Data de nascimento:</label>
             <br>
-            <input type="date" id="date" name="date" class="formulario">
+            <input type="date" id="date" name="date" class="formularioOption">
             <br>
             <label>CPF:</label>
             <br>
@@ -62,22 +73,22 @@
             <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formulario">
             <br>
             <br>
-            <div class="btn-cadVet">
-              <button type="button" class="btn-cadVet-cadastrar">Cadastrar</button>
-              <button type="button" class="btn-cadVet-limpar">Limpar</button>
-            </div>
-            <br>
-
+            
+        </div>
+        <div class="btn-sigIn">
+          <button type="button" class="btn-entrar">Cadastrar</button>
+          <button type="button" class="btn-limpar">Limpar</button>
         </div>
         <br>
         </form>
+    </section>
 
-        <%- include('./partials/footer.ejs') %>
+    <%- include('./partials/footer.ejs') %>
 
-  </body>
+</body>
 
-  <%- include('./partials/telefone.ejs') %>
+<%- include('./partials/telefone.ejs') %>
 
-    <%- include('./partials/js.ejs') %>
+  <%- include('./partials/js.ejs') %>
 
 </html>
