--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-  <%-include('./partials/head.ejs') %>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/header.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css" />
+    <link rel="stylesheet" href="/stylesheets/cadastro.css" />
+    <link rel="stylesheet" href="/stylesheets/promo.css" />
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+      type="text/javascript"
+    ></script>
+    <title>PetHelp</title>
+  </head>
 
 <body class="cadastroBody">
   
     <%-include('./partials/header.ejs') %>
  
 
-  <section>
-    <h3 class="user-cad" > Cadastro de usuario </h3>
+  <section class="corpo">
+    
     <div class="align-row-userCad" >
+      <h3 class="user-cad" > Cadastro de usuario </h3>
       <form method="POST" >
         
 
         <label for="name" class="nome">Nome:</label>
         <br>
-        <input type="text" id="name" name="name" required class="formulario">
+        <input type="text" id="name" name="name" required class="formularioCadastro">
         <br>
 
         <label for="endereco">Endereço:</label>
         <br>
-        <input type="text" id="endereco" name="endereco" required class="formulario">
+        <input type="text" id="endereco" name="endereco" required class="formularioCadastro">
         <br>
 
         <label for="number">Telefone/Whatsapp:</label>
         <br>
-        <input type="number" id="number" name="number" required class="formulario">
+        <input type="number" id="number" name="number" required class="formularioCadastro">
         <br>
 
         <label for="email">E-mail:</label>
         <br>
-        <input type="email" id="email" name="email" required class="formulario">
+        <input type="email" id="email" name="email" required class="formularioCadastro">
         <br>
 
         <label>Sexo:</label>
         <br>
-        <select name="Genero" class="formulario">
+        <select name="Genero" class="formularioCadastro">
           <option value="1">Masculino
           </option>
           <option value="2">Feminino
@@ -47,17 +60,17 @@
         <br>
         <label>Data de nascimento:</label>
         <br>
-        <input type="date" id="date" name="date" class="formulario">
+        <input type="date" id="date" name="date" class="formularioCadastro">
         <br>
         <label>CPF:</label>
         <br>
 
-        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formulario">
+        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formularioCadastro">
         <br>
 
         <label>PET:</label>
         <br>
-        <select name="tipo" class="formulario">
+        <select name="tipo" class="formularioCadastro">
           <option value="1">Cachorro
           </option>
           <option value="2">Gato
@@ -65,11 +78,11 @@
         <br>
         <label for="name">Nome do pet:</label>
         <br>
-        <input type="text" id="namePet" name="name" required class="formulario">
+        <input type="text" id="namePet" name="name" required class="formularioCadastro">
         <br>
         <label for="idadePet">Idade do pet:</label>
         <br>
-        <input type="text" id="idadePet" name="Idade" required class="formulario">
+        <input type="text" id="idadePet" name="Idade" required class="formularioCadastro">
         <br>
 
 
@@ -85,7 +98,7 @@
     </div>
     <br>
     </form>
-
+  </section>
 
     
       <%- include('./partials/footer.ejs') %>
