Criado pagina Cadastro de Pets, ajustado Rotas do Header

--- a/views/partials/header_cliente.ejs
+++ b/views/partials/header_cliente.ejs
@@ -8,25 +8,23 @@
   <!--Ajuste Gustavo - Adicionado class: itens-menu e criado css-->
   <nav class="itens-menu">
     <ul class="itens">
-      <li><a href="/clientes">Home</a></li>
-      <li><a href="/clientes/clientes_consultas">Consultas</a></li>
-      <li><a href="/clientes/cadastropets">Cadastro Pet</a></li> 
-      <li><a href="/clientes/cadastrocliente">Alterar Dados</a></li> 
+      <li><a href="/">Inicio</a></li>
+      <li><a href="/cadastroPet">Menu</a></li>
 
-    </ul>   
+      <li><a href="/clientes/cadastrocliente">Perfil</a></li>
+    </ul>
   </nav>
   <div>
     <a href="#">Gustavo Cortes</a>
   </div>
 
   <!--Ajuste Gustavo - Adicionado trecho abaixo-->
-      
-    <span class="btn-menu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </span>
-  
+
+  <span class="btn-menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </span>
 
   <!--Ajuste Gustavo - FIM-->
 </header>
