--- a/views/CadastroPet.ejs
+++ b/views/CadastroPet.ejs
@@ -4,15 +4,96 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="/stylesheets/header.css" />
     <link rel="stylesheet" href="/stylesheets/footer.css" />
-    <link rel="stylesheet" href="/public/stylesheets/CadPet.css" />
+    <link rel="stylesheet" href="/stylesheets/CadastroPet.css" />
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
       type="text/javascript"
     ></script>
-    <title>PetHelp</title>
+    <title>Cadastro de Pets</title>
   </head>
-  <body></body>
+  <body class="bodyCadPet">
+    <%-include('./partials/header_cliente.ejs') %>
+    <h3 class="H3CadPet">Lista de Pets</h3>
+
+    <section class="row-CadPet">
+      <div class="fotosCadpet">
+        <% for (pets of pets) { %>
+        <div class="cardCadPet">
+          <img class="image" src="/images/<%=pets.foto%>" alt="money" />
+          <h2><%= pets.nome %></h2>
+          <a class="buttonCadPet" href="#dadosPet" target="_blank">Detalhe</a>
+        </div>
+        <% } %><!-- AQUI FICARÁ AS IMAGENS DOS PETS -->
+      </div>
+    </section>
+    <div class="seta">   </div>
+    <div class="AdicionarPetbtn">
+      <button type="button" class="AdicionarCadPet">+ Adicionar Pet</button>
+    </div>
+    <h3 class="H3DadosCadPet">Dados Pet</h3>
+
+    <section class="Forms">
+      <!-- FORMULARIO -->
+      <div class="FormularioCadPet">
+        <label for="nome">Nome:</label>
+        <input type="text" class ="FormCadPet" id="dadosPet" />
+
+        <label for="Nascimento">Nascimento:</label>
+        <input type="date" name="Nascimento" class ="FormCadPet" id="dadosPet" />
+
+        <label for="idade">Idade:</label>
+        <input type="number" name="idade" class ="FormCadPet" id="dadosPet" />
+        </div>
+        <div class="FormularioCadPet2">
+        <label for="raça">Raça:</label>
+        <input type="text" name="raça" class ="FormCadPet" id="dadosPet" />
+
+        <label for="Pelagem">Pelagem</label>
+        <input type="text" name="Pelagem" class ="FormCadPet"  id="dadosPet"/>
+
+        <label for="Sexo">Sexo:</label>
+        <input type="text" name="Sexo" class="FormCadPet" id="dadosPet" />
+      </div>
+    </section>
+      <h3 class="Historico-CadPet">Historico de Consultas</h3>
+
+    <div class="Agendar-CadPet">
+      <button type="button" class="AgendarConsulta-btn">Nova Consulta</button>
+    </div>
+
+      <table class="TabelaCadPet">
+          <tr>
+              <th>Pet</th>
+              <th>Data</th>
+              <th>Médico</th>
+              <th>Especialidade</th>
+              <th>Editar/Excluir Consultas</th>
+          </tr>
+          <% for(consultas of consultas) { %>
+              <tr>
+                  <td>
+                      <%= consultas.pet %>
+                  </td>
+                  <td>
+                      <%= consultas.data %>
+                  </td>
+                  <td>
+                      <%= consultas.medico %>
+                  </td>
+                  <td>
+                      <%= consultas.especialidade %>
+                  </td>
+                  
+                  <td><a class="btn-Editar" href="#" target="_blank">Editar</a>
+                    <a class="btn-Excluir" href="#" target="_blank">Excluir</a></td>
+                  
+              </tr>
+              <% } %>
+      </table>
+  </div>
+
+    <%-include('./partials/footer.ejs') %>
+  </body>
 </html>
