--- a/views/partials/header_cliente.ejs
+++ b/views/partials/header_cliente.ejs
@@ -8,10 +8,10 @@
   <!--Ajuste Gustavo - Adicionado class: itens-menu e criado css-->
   <nav class="itens-menu">
     <ul class="itens">
-      <li><a href="/clientes">Home</a></li>
-      <li><a href="Sobre.html">Consultas</a></li>
-      <li><a href="MundoPet.html">Cadastro Pet</a></li> 
-      <li><a href="/clientes/cadastrocliente">Alterar Dados</a></li> 
+      <li><a href="/">Inicio</a></li>
+      <li><a href="/abaVeterinario">Consultas</a></li>
+      <li><a href="/cadVet">Dados cadastro</a></li> 
+      
 
     </ul>   
   </nav>
