Ajuste final dos itens perdidos no ultimo GIT PUSH

--- a/public/stylesheets/CadastroPet.css
+++ b/public/stylesheets/CadastroPet.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap");
+
 * {
+  font-family: "Kantumruy Pro", sans-serif;
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  font-family: Quicksand;
 }
+
 
 .fotosCadpet {
   gap: 80px;
