--- a/views/abaVet.ejs
+++ b/views/abaVet.ejs
@@ -42,8 +42,8 @@
                 <td></td>
 
                 <td>
-                  <button type="button" class="button-verde" id="cadastrarCliente">Remarcar</button>
-                  <a class="button-vermelho" href="#" target="_blank">Cancelar</a>
+                  <button type="button" class="btn-verde" id="cadastrarCliente">Remarcar</button>
+                  <button type="button" class="btn-vermelho">Cancelar</button>
                 </td>
               </tr>
               <% } %>
@@ -69,11 +69,9 @@
           <label for="Diagnostico" class="Diagnostico">Diagnóstico:</label>
 
           <textarea cols="30" rows="5" class="diagnostico-mensagem"></textarea>
-
-          <button type="button" class="button-verde">Enviar</button>
-
+          <button type="button" class="btn-verde">Enviar</button>
         </form>
-
+        
       </div>
 
       <div class="HistoricoConsultas">
@@ -101,7 +99,7 @@
               <td></td>
               <td></td>
 
-              <td><button type="button" class="button-verde" id="Relatorio">Relátorio</button></td>
+              <td><button type="button" class="btn-verde" id="Relatorio">Relátorio</button></td>
             </tr>
             <% } %>
         </table>
