--- a/views/cadVet.ejs
+++ b/views/cadVet.ejs
@@ -76,9 +76,9 @@
             <br>
             <br>
 
-            <div class="btn-cadVet">
-              <button type="button" class="btn-cadVet-cadastrar">Cadastrar</button>
-              <button type="button" class="btn-cadVet-limpar">Limpar</button>
+            <div class="btn-sigIn">
+              <button type="button" class="btn-verde">Cadastrar</button>
+              <button type="button" class="btn-vermelho">Limpar</button>
             </div>
             <br>
 
