--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -90,8 +90,8 @@
 
         <br>
         <div class="btn-userCad">
-          <button type="button" class="btn-userCad-cad">Cadastrar</button>
-          <button type="button" class="btn-userCad-limpar">Limpar</button>
+          <button type="button" class="btn-verde">Cadastrar</button>
+          <button type="button" class="btn-vermelho">Limpar</button>
         </div>
         <br>
 
