--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -35,13 +35,13 @@
           <br>
           <label for="Mensagem">Mensagem:</label>
           <br>
-          <input type="text" id="mensagem" name="Mensagem" size="300" class="contato-mensagem" />
+          <textarea cols="30" rows="5" class="contato-mensagem"></textarea>
           <br>
         </form>
       </div>
       <div class="btn-sigIn">
-        <button type="button" class="btn-entrar">Enviar</button>
-        <button type="button" class="btn-limpar">Limpar</button>
+        <button type="button" class="btn-verde">Enviar</button>
+        <button type="button" class="btn-vermelho">Limpar</button>
       </div>
       <br>
     </section>
