--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,8 +27,7 @@
 
           <br>
           <div class="btn-login">
-            <button type="button" class="user-login">Login</button>
-            <button type="button" class="cadastroLogin">Cadastro</button>
+            <a href="/cadastro" class="cadastroLogin">Cadastrar</a>
           </div>
           <br>
 
@@ -46,8 +45,8 @@
 
         <br>
         <div class="btn-sigIn">
-          <button type="button" class="btn-entrar">Entrar</button>
-          <button type="button" class="btn-limpar">Limpar</button>
+          <button type="button" class="btn-verde">Entrar</button>
+          <button type="button" class="btn-vermelho">Limpar</button>
         </div>
         <br>
 
