--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -1,12 +1,5 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap');
-
 * {
-  font-family: 'Kantumruy Pro', sans-serif;
-
   margin: 0;
-
-  text-decoration: none black;
 }
 
 .interactions {
@@ -17,44 +10,43 @@
   gap: 50px;
   text-decoration: none;
 }
-.limpar {
-  background-color: white;
-  text-decoration-color: black;
-  max-width: 198px;
-  width: 100%;
-  height: 48px;
 
-  @media (max-width: 1535px) {
-  }
+body {
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 
   min-width: 100vw;
-  background-color: rgba(86, 177, 189, 0.45);
+  background-color: #dddddd;
   text-align: center;
 }
-
+.align-row {
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  text-align: start;
+  font-size: 24px;
+  align-items: center;
+}
 .pg-contato {
   margin: 0 auto;
   font-size: 24px;
   padding: 50px;
 }
-
 .contato-formulario {
+  max-width: 100%;
   border: none;
-  max-width: 500px;
+  width: 450px;
   height: 50px;
-  width: 100%;
   border-radius: 38px;
   font-size: 18px;
-  margin: 10px auto;
-  display: flex;
-  flex-direction: column;
   text-align: center;
-  font-size: 20px;
-  align-items: center;
+  margin: 10px 0px 10px 0px;
 }
-
 .contato-mensagem {
   border: none;
+  padding: 20px 20px 20px 20px;
   width: 100%;
   height: 202px;
   border-radius: 38px;
@@ -63,20 +55,12 @@
   margin: 10px 0px 10px 0px;
   max-width: 500px;
 }
-
 /* Como fazer o texto preencher toda a caixa da mensagem ? */
 
-
-
-button:hover {
-  background-color: hsl(137, 100%, 81%);
-}
-
-.btn-entrar {
-  background-color: black;
-  color: white;
-  width: 198px;
-  height: 42px;
+.btn-form {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 .btn-sigIn {
   display: flex;
@@ -87,11 +71,33 @@ button:hover {
   text-align: center;
 }
 
-.btn-limpar {
-  background-color: white;
-  text-decoration-color: black;
-  width: 198px;
-  height: 42px;
+.btn-verde {
+  border-radius: 15px;
+  font-weight: 800;
+  border: none;
+  background-color: #9effba;
+  max-width: 150px;
+  height: 35px;
+  width: 100%;
 }
 
-@media (max-width: 1535px) {}
+.btn-vermelho {
+  border-radius: 15px;
+  font-weight: 800;
+  border: none;
+  background-color: #e48585;
+  max-width: 150px;
+  height: 35px;
+  width: 100%;
+}
+
+
+
+
+button:hover {
+  background-color: #44f376;
+}
+
+
+@media (max-width: 1535px) {
+}
