--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@200&display=swap");
+
 * {
   font-family: "Kantumruy Pro", sans-serif;
   margin: 0;
@@ -7,12 +8,11 @@
 body {
   font-family: "Open Sans", sans-serif;
   min-width: 100vw;
-  background-color: rgba(86, 177, 189, 0.45);
+  background-color: #dddddd;
   text-align: center;
 }
+
 .cadastroLogin {
-  border: none;
-  background-color: rgba(86, 177, 189, 0.45);
   color: black;
   max-width: 160px;
   width: 100%;
@@ -29,6 +29,7 @@ body {
   height: 36px;
   font-size: 24px;
 }
+
 .formularioLogin {
   border: none;
   max-width: 500px;
@@ -49,12 +50,6 @@ body {
   margin: 25px auto;
   text-align: center;
 }
-.btn-entrar {
-  background-color: black;
-  color: white;
-  width: 198px;
-  height: 42px;
-}
 
 .btn-sigIn {
   display: flex;
@@ -65,15 +60,31 @@ body {
   text-align: center;
 }
 
-.btn-limpar {
-  background-color: white;
-  text-decoration-color: black;
-  width: 198px;
-  height: 42px;
-}
-button:hover {
-  background-color: hsl(137, 100%, 81%);
+.btn-verde {
+  border-radius: 15px;
+  font-weight: 800;
+  border: none;
+  background-color: #9effba;
+  max-width: 150px;
+  height: 35px;
+  width: 100%;
 }
 
-@media (max-width: 1535px) {
+.btn-vermelho {
+  border-radius: 15px;
+  font-weight: 800;
+  border: none;
+  background-color: #e48585;
+  max-width: 150px;
+  height: 35px;
+  width: 100%;
 }
+
+
+
+
+button:hover {
+  background-color: #44f376;
+}
+
+@media (max-width: 1535px) {}
