Configurando banco de dados no mysql, problemas na migrations Pets

--- a/views/abaVet.ejs
+++ b/views/abaVet.ejs
@@ -38,7 +38,9 @@
                 <td>
                   <%= agenda.dt_agendado %>
                 </td>
-                <td></td>
+                <td>
+                  <%= agenda.horario %>
+                </td>
                 <td></td>
 
                 <td>
