--- a/views/abaVet.ejs
+++ b/views/abaVet.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/stylesheets/header.css">
   <link rel="stylesheet" href="/stylesheets/footer.css">
   <link rel="stylesheet" href="/stylesheets/abaVet.css">
-  <link rel="stylesheet" href="/stylesheets/modal.css">
+  <link rel="stylesheet" href="/stylesheets/modalVet.css">
 
 
 <body class="bodyagenda">
@@ -106,10 +106,10 @@
       </div>
     </div>
     
-    <%-include('./partials/modal.ejs') %>
+    <%-include('./partials/modalVet.ejs') %>
 
     <%-include('./partials/footer.ejs') %>
 </body>
-<script src="/javascripts/main.js"></script>
+<script src="/javascripts/modalVet.js"></script>
 
 </html>
