--- a/views/partials/modalVet.ejs
+++ b/views/partials/modalVet.ejs
@@ -18,8 +18,8 @@
         </form>
 
         <footer class="modal-footer">
-          <button class="button-verde" id="salvar">Salvar</button>
-          <button class="button-vermelho" id="cancelar">Cancelar</button>
+          <button class="btn-verde" id="salvar">Salvar</button>
+          <button class="btn-vermelho" id="cancelar">Cancelar</button>
         </footer>
 
       </div>
@@ -38,7 +38,7 @@
 
         <div>
 
-          <h1>Espaço separado para trazer o diagnostico</h1>
+          <h1>Relatorio virá aqui</h1>
           
         </div>
 
