--- a/views/cadVet.ejs
+++ b/views/cadVet.ejs
@@ -52,6 +52,12 @@
               class="formulario">
             <br>
 
+            <label for="email">Senha:</label>
+            <br>
+            <input type="password" id="pass" name="password" minlength="8" required class="formulario">
+            <p>* Senha deve conter no mínimo 8 caracteres.</p>
+            <br>
+
             <label>Sexo:</label>
             <br>
             <select name="Genero" class="formularioOption">
