--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -60,7 +60,7 @@ form {
   border: none;
   max-width: 500px;
   width: 100%;
-  height: 50px;
+  height: 35px;
   border-radius: 38px;
   font-size: 18px;
   text-align: center;
@@ -112,6 +112,11 @@ button:hover {
   max-width: 150px;
   height: 35px;
   width: 100%;
+}
+
+p{
+  font-size: small;
+  color: red;
 }
 
 
