--- a/views/abaVet.ejs
+++ b/views/abaVet.ejs
@@ -69,7 +69,7 @@
           <label for="Diagnostico" class="Diagnostico">Diagnóstico:</label>
 
           <textarea cols="30" rows="5" class="diagnostico-mensagem"></textarea>
-          <button type="button" class="btn-verde">Enviar</button>
+          <input type="submit" value="Entrar" class="btn-verde">
         </form>
         
       </div>
