--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,110 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/header.css" />
-    <link rel="stylesheet" href="/stylesheets/footer.css" />
-    <link rel="stylesheet" href="/stylesheets/cadastro.css" />
-    <link rel="stylesheet" href="/stylesheets/promo.css" />
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
-      type="text/javascript"
-    ></script>
-    <title>PetHelp</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/stylesheets/header.css" />
+  <link rel="stylesheet" href="/stylesheets/footer.css" />
+  <link rel="stylesheet" href="/stylesheets/cadastro.css" />
+  <link rel="stylesheet" href="/stylesheets/promo.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+  <title>PetHelp</title>
+</head>
 
 <body class="cadastroBody">
-  
-    <%-include('./partials/header.ejs') %>
- 
 
-  <section class="corpo">
-    
-    <div class="align-row-userCad" >
-      <h3 class="user-cad" > Cadastro de usuario </h3>
-      <form method="POST" >
-        
-
-        <label for="name" class="nome">Nome:</label>
-        <br>
-        <input type="text" id="name" name="name" required class="formularioCadastro">
-        <br>
-
-        <label for="endereco">Endereço:</label>
-        <br>
-        <input type="text" id="endereco" name="endereco" required class="formularioCadastro">
-        <br>
-
-        <label for="number">Telefone/Whatsapp:</label>
-        <br>
-        <input type="number" id="number" name="number" required class="formularioCadastro">
-        <br>
-
-        <label for="email">E-mail:</label>
-        <br>
-        <input type="email" id="email" name="email" required class="formularioCadastro">
-        <br>
-
-        <label>Sexo:</label>
-        <br>
-        <select name="Genero" class="formularioCadastro">
-          <option value="1">Masculino
-          </option>
-          <option value="2">Feminino
-          </option>
-          <option value="3">Outro
-          </option>
-        </select>
-        <br>
-        <label>Data de nascimento:</label>
-        <br>
-        <input type="date" id="date" name="date" class="formularioCadastro">
-        <br>
-        <label>CPF:</label>
-        <br>
-
-        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formularioCadastro">
-        <br>
-
-        <label>PET:</label>
-        <br>
-        <select name="tipo" class="formularioCadastro">
-          <option value="1">Cachorro
-          </option>
-          <option value="2">Gato
-        </select>
-        <br>
-        <label for="name">Nome do pet:</label>
-        <br>
-        <input type="text" id="namePet" name="name" required class="formularioCadastro">
-        <br>
-        <label for="idadePet">Idade do pet:</label>
-        <br>
-        <input type="text" id="idadePet" name="Idade" required class="formularioCadastro">
-        <br>
+  <%-include('./partials/header.ejs') %>
 
 
+    <section class="corpo">
+
+      <div class="align-row-userCad">
+        <h3 class="user-cad"> Cadastro de usuario </h3>
+        <form method="POST">
 
 
-        <br>
-        <div class="btn-userCad">
-          <button type="button" class="btn-verde">Cadastrar</button>
-          <button type="button" class="btn-vermelho">Limpar</button>
-        </div>
-        <br>
+          <label for="name" class="nome">Nome:</label>
+          <br>
+          <input type="text" id="name" name="name" required class="formularioCadastro">
+          <br>
 
-    </div>
-    <br>
-    </form>
-  </section>
+          <label for="endereco">Endereço:</label>
+          <br>
+          <input type="text" id="endereco" name="endereco" required class="formularioCadastro">
+          <br>
 
-    
-      <%- include('./partials/footer.ejs') %>
-    
+          <label for="number">Telefone/Whatsapp:</label>
+          <br>
+          <input type="number" id="number" name="number" required class="formularioCadastro">
+          <br>
+
+          <label for="email">E-mail:</label>
+          <br>
+          <input type="email" id="email" name="email" required class="formularioCadastro">
+          <br>
+          <label for="email">Senha:</label>
+          <br>
+          <input type="password" id="pass" name="password" minlength="8" required class="formularioCadastro">
+          <p>* Senha deve conter no mínimo 8 caracteres.</p>
+          <br>
+
+          <label>Sexo:</label>
+          <br>
+          <select name="Genero" class="formularioCadastro">
+            <option value="1">Masculino
+            </option>
+            <option value="2">Feminino
+            </option>
+            <option value="3">Outro
+            </option>
+          </select>
+          <br>
+          <label>Data de nascimento:</label>
+          <br>
+          <input type="date" id="date" name="date" class="formularioCadastro">
+          <br>
+          <label>CPF:</label>
+          <br>
+          <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formularioCadastro">
+          <br>
+
+          <label>PET:</label>
+          <br>
+          <select name="tipo" class="formularioCadastro">
+            <option value="1">Cachorro
+            </option>
+            <option value="2">Gato
+          </select>
+          <br>
+          <label for="name">Nome do pet:</label>
+          <br>
+          <input type="text" id="namePet" name="name" required class="formularioCadastro">
+          <br>
+          <label for="idadePet">Idade do pet:</label>
+          <br>
+          <input type="text" id="idadePet" name="Idade" required class="formularioCadastro">
+          <br>
+
+
+
+
+          <br>
+          <div class="btn-userCad">
+            <input type="submit" value="Entrar" class="btn-verde">
+            <button type="button" class="btn-vermelho">Limpar</button>
+          </div>
+          <br>
+
+      </div>
+      <br>
+      </form>
+    </section>
+
+
+    <%- include('./partials/footer.ejs') %>
+
 </body>
 <%- include('./partials/js.ejs') %>
-<%- include('./partials/email.ejs') %>
-<%- include('./partials/Telefone.ejs') %>
+  <%- include('./partials/email.ejs') %>
+    <%- include('./partials/Telefone.ejs') %>
+
 </html>
