--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
     <section>
 
       <div class="">
-        <form method="post" class="form" action="../routes/rotasLogin.js">
+        <form method="post" class="form" action="/login">
 
           <br>
           <div class="btn-login">
